--- a/Chushka/Chushka.csproj
+++ b/Chushka/Chushka.csproj
@@ -8,9 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="wwwroot\css2\bootstrap.min.css" />
-    <None Include="wwwroot\css2\reset-css.css" />
-    <None Include="wwwroot\css2\style.css" />
+    <None Include="wwwroot\cssyordanova\bootstrap.min.css" />
+    <None Include="wwwroot\cssyordanova\reset-css.css" />
+    <None Include="wwwroot\cssyordanova\style.css" />
   </ItemGroup>
 
   <ItemGroup>
